@@ -13,6 +13,7 @@ import java.awt.event.ActionListener;
 import java.awt.geom.Dimension2D;
 import java.awt.geom.Ellipse2D;
 import java.awt.geom.Point2D;
+import java.util.ArrayList;
 
 import edu.colorado.phet.buildanatom.BuildAnAtomConstants;
 import edu.colorado.phet.buildanatom.model.Atom;
@@ -58,6 +59,7 @@ public class BuildAnAtomCanvas extends PhetPCanvas {
 
     // Reset button.
     private final GradientButtonNode resetButtonNode;
+    private ArrayList<MaximizeControlNode> maximizeControlNodeArrayList=new ArrayList<MaximizeControlNode>( );
 
     //----------------------------------------------------------------------------
     // Constructors
@@ -185,7 +187,7 @@ public class BuildAnAtomCanvas extends PhetPCanvas {
         PDimension elementIndicatorNodeWindowSize = new PDimension( 400, 250 - verticalSpacingBetweenWindows * 2 );
         ElementIndicatorNode elementIndicatorNode = new ElementIndicatorNode( model.getAtom() );
         // TODO: i18n
-        PNode elementIndicatorWindow = new MaximizeControlNode( "Element", elementIndicatorNodeWindowSize, elementIndicatorNode, true );
+        MaximizeControlNode elementIndicatorWindow = new MaximizeControlNode( "Element", elementIndicatorNodeWindowSize, elementIndicatorNode, true );
         elementIndicatorNode.setOffset( elementIndicatorNodeWindowSize.width / 2 - elementIndicatorNode.getFullBounds().getWidth() / 2, elementIndicatorNodeWindowSize.getHeight() / 2 - elementIndicatorNode.getFullBounds().getHeight() / 2 );
         elementIndicatorWindow.setOffset( indicatorWindowPosX, verticalSpacingBetweenWindows );
         elementIndicatorNode.translate( 0, 10 );//fudge factor since centering wasn't quite right
@@ -194,7 +196,7 @@ public class BuildAnAtomCanvas extends PhetPCanvas {
         // Symbol indicator
         SymbolIndicatorNode symbolNode = new SymbolIndicatorNode( model.getAtom(), 83, 83 );//has to be big enough to hold Ne with 2 digit numbers on both sides
         // TODO: i18n
-        PNode symbolWindow = new MaximizeControlNode( "Symbol", windowSize, symbolNode, true );
+        MaximizeControlNode symbolWindow = new MaximizeControlNode( "Symbol", windowSize, symbolNode, true );
         //PDebug.debugBounds = true;//helps get the layout and bounds correct
         double insetX = 20;
         symbolNode.setOffset( insetX, windowSize.height / 2 - symbolNode.getFullBounds().getHeight() / 2 );
@@ -204,7 +206,7 @@ public class BuildAnAtomCanvas extends PhetPCanvas {
         // Mass indicator
         MassIndicatorNode massIndicatorNode = new MassIndicatorNode( model.getAtom() );
         // TODO: i18n
-        PNode massWindow = new MaximizeControlNode( "Mass", windowSize, massIndicatorNode, true );
+        MaximizeControlNode massWindow = new MaximizeControlNode( "Mass", windowSize, massIndicatorNode, true );
         massIndicatorNode.setOffset( insetX, windowSize.height / 2 );//todo: the layout centers the scale node since the scale's origin is its top left
         massWindow.setOffset( indicatorWindowPosX, symbolWindow.getFullBounds().getMaxY() + verticalSpacingBetweenWindows );
         rootNode.addChild( massWindow );
@@ -212,7 +214,7 @@ public class BuildAnAtomCanvas extends PhetPCanvas {
         // Charge indicator
         ChargeIndicatorNode chargeIndicatorNode = new ChargeIndicatorNode( model.getAtom() );
         // TODO: i18n
-        PNode chargeWindow = new MaximizeControlNode( "Charge", windowSize, chargeIndicatorNode, true );
+        MaximizeControlNode chargeWindow = new MaximizeControlNode( "Charge", windowSize, chargeIndicatorNode, true );
         chargeIndicatorNode.setOffset( insetX, windowSize.height / 2 - chargeIndicatorNode.getFullBounds().getHeight() / 2 );
         chargeWindow.setOffset( indicatorWindowPosX, massWindow.getFullBounds().getMaxY() + verticalSpacingBetweenWindows );
         rootNode.addChild( chargeWindow );
@@ -225,13 +227,18 @@ public class BuildAnAtomCanvas extends PhetPCanvas {
         resetButtonNode.addActionListener( new ActionListener() {
             public void actionPerformed( ActionEvent e ) {
                 BuildAnAtomCanvas.this.model.reset();
+                reset();
             }
         } );
         resetButtonNode.setOffset(
                 chargeWindow.getFullBounds().getCenterX() - resetButtonNode.getFullBounds().getWidth() / 2,
                 chargeWindow.getFullBounds().getMaxY() + verticalSpacingBetweenWindows );
-    }
 
+        maximizeControlNodeArrayList.add( chargeWindow );
+        maximizeControlNodeArrayList.add( elementIndicatorWindow );
+        maximizeControlNodeArrayList.add( massWindow );
+        maximizeControlNodeArrayList.add( symbolWindow );
+    }
     //----------------------------------------------------------------------------
     // Accessors
     //----------------------------------------------------------------------------
@@ -256,5 +263,11 @@ public class BuildAnAtomCanvas extends PhetPCanvas {
         }
 
         //XXX lay out nodes
+    }
+
+    public void reset() {
+        for ( MaximizeControlNode maximizeControlNode : maximizeControlNodeArrayList ) {
+            maximizeControlNode.setMaximized( true );
+        }
     }
 }
